--- a/generators/templates/main/main.j2
+++ b/generators/templates/main/main.j2
@@ -6,7 +6,7 @@ from app.db import Database
 {# --- Dynamic Import of Service Classes --- #}
 {% for service in services %}
 {% set tokens = service.split('.') %}
-from app.services.{{ service }} import {{ tokens[1]|capitalize }}{{ tokens[2]|capitalize }} as {{ tokens[2]|capitalize }}{{ tokens[2]|capitalize }}
+from app.services.{{ service }} import {{ tokens[1]|capitalize }}{{ tokens[0]|capitalize }} as {{ tokens[0]|capitalize }}
 {% endfor %}
 
 {# --- Dynamic Import of Route Routers for Entities --- #}
