change APIs so /entities returns all metadata, entity endpoints like /account only return data

--- a/generators/templates/main/main.j2
+++ b/generators/templates/main/main.j2
@@ -72,15 +72,11 @@ def read_root():
 
 @app.get('/api/entities')
 def get_entities_metadata():
-    result = [
+    return [
 {% for entity in entities %}
         {{ entity }}.get_metadata(),     
 {% endfor %}
     ]
-    r1 = copy.deepcopy(result)
-    for r in r1:
-        r.pop('fields')
-    return r1
 
 if __name__ == '__main__':
     import uvicorn
